# rusty-celery.github.io

./: .gitmodules  404.html  Cargo.toml  Makefile  README.md  additional-resources.html  book.toml  checks.sh  config.toml  index.html  lib.rs  print.html  quick-start.html  searchindex.js  searchindex.json  what-is-celery.html
.github/workflows/: deploy.yml
best-practices/: index.html
coming-from-python/: index.html
content/introduction/: _index.md
guide/: defining-tasks.html  index.html  running-workers.html
src/: SUMMARY.md  additional-resources.md  lib.rs  quick-start.md  what-is-celery.md
src/best-practices/: index.md
src/coming-from-python/: index.md
src/getting-started/: index.md
src/guide/: defining-tasks.md  index.md  running-workers.md
