[package]
name = "rusty-celery-book"
version = "0.1.0"
authors = ["epwalsh <epwalsh10@gmail.com>"]
edition = "2018"

[dependencies]
async-trait = "0.1"
tokio = { version = "0.2", features = ["full"] }
celery = { git = "https://github.com/rusty-celery/rusty-celery" }
# celery = { path = "../rusty-celery" }
exitfailure = "0.5.1"
log = "0.4"
env_logger = "0.7"
serde = "1.0"
doc-comment = "0.3.1"
